--- a/index.html
+++ b/index.html
@@ -1,7 +1,23 @@
 <!doctype html>
 <html>
+  <head>
+        <meta charset="UTF-8">
+        <title>Fashion Companion</title>
+        <link rel="stylesheet" href="styles.css">
+  </head>
   <body>
     <h1>Hello from Github Pages 👋</h1>
+
+    <p> this is my paragraph </p>
+
+
+
+
+
+
+
+
+    
   </body>
 </html>
 
