--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
         <meta charset="UTF-8">
         <title>Fashion Companion</title>
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <h1>Hello from Github Pages 👋</h1>
