--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
 
     <p> this is my paragraph </p>
 
+    <img src="https://i.kym-cdn.com/entries/icons/facebook/000/043/100/wolfripcover.jpg" alt="Wolf Ripping Cover" width="100%" height="150px">
+
+    <h2> 1. Read the error messages thoroughly </h2>
+    <p>Few habits pay off as consistently as actually reading your error messages. They’re often written by the people who built the tools you’re using — people trying to help you debug faster. Resist the reflex to panic and copy-paste the message into a search bar. Instead, slow down, decipher its meaning, and you’ll usually find the exact hint you need to fix the root cause.</p>
+
 
   </body>
 </html>
 
+#open index.html to see the changes on the web
