--- a/index.html
+++ b/index.html
@@ -2,21 +2,47 @@
 <html>
   <head>
         <meta charset="UTF-8">
-        <title>Fashion Companion</title>
+        <title>Top Tech Advice</title>
         <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>Hello from Github Pages 👋</h1>
+    <img src="TopTechTips-TopTechTips-fromAlexandTVSLYST-fromAle.png" width="100%" height="150px">
 
-    <p> this is my paragraph </p>
+    <img src="https://cdn.vectorstock.com/i/1000v/77/60/happy-thumbs-up-smiley-face-vector-23657760.jpg"width="100%" height="150px">
 
-    <img src="https://i.kym-cdn.com/entries/icons/facebook/000/043/100/wolfripcover.jpg" alt="Wolf Ripping Cover" width="100%" height="150px">
+    <h1> genuine thanks for the tips, not trying to take the mick out of the content with this design i promise</h1>
 
     <h2> 1. Read the error messages thoroughly </h2>
     <p>Few habits pay off as consistently as actually reading your error messages. They’re often written by the people who built the tools you’re using — people trying to help you debug faster. Resist the reflex to panic and copy-paste the message into a search bar. Instead, slow down, decipher its meaning, and you’ll usually find the exact hint you need to fix the root cause.</p>
 
+    <h2 class="moo-lah-lah-regular">2. Keep it simple</h2>
+    <p>Every scalable system began as a small, working prototype. Overengineering early on is one of the easiest traps to fall into. Start simple, make it work, and only then evolve it. Lean designs are easier to test, deploy, and replace when needed. Complexity should be added consciously, not by accident.</p>
+
+    <h2>3. Stay curious — it’s your superpower</h2>
+    <p>Curiosity fuels growth in engineering. The best engineers never stop asking “why” and “how.” They open unfamiliar files, trace code paths, explore design docs, and experiment with APIs just for the fun of it. That instinct to explore will quietly sharpen your instincts far more than any formal course.</p>
+
+    <h2 class="moo-lah-lah-regular">4. Tenacity — don’t give up too soon</h2>
+    <p>Debugging can be maddening, but perseverance separates the seasoned engineers from the rest. Break problems into chunks, test your assumptions, and keep iterating. It’s astonishing how often the solution appears right after you almost quit. Tenacity builds confidence and deepens technical intuition.</p>
+
+    <h2>5. Don’t trust AI blindly</h2>
+    <p>AI tools can drastically speed up your work — but they also make mistakes in convincing ways. Treat them like clever interns: useful, but unreliable without supervision. Always review, test, and understand their suggestions before pushing them into production. Critical thinking is your safeguard.</p>
+
+    <h2 class="moo-lah-lah-regular">6. Define the problem before solving it</h2>
+    <p>The fastest way to waste days is to misunderstand the real problem. Spend time asking clarifying questions, reviewing requirements, and validating assumptions. Once you pinpoint the true pain point, the scope shrinks and the path forward becomes clear. Great engineers are great problem framers.</p>
+
+    <h2>7. Soft skills — or rather, “core skills”</h2>
+    <p>Communication, empathy, and collaboration aren’t optional extras — they’re career accelerators. You’ll need to influence decisions, manage expectations, and translate complex ideas into plain language. These “soft” skills often create more impact than technical brilliance alone.</p>
+
+    <h2 class="moo-lah-lah-regular">8. Communication across levels</h2>
+    <p>Whether you’re explaining a deployment issue to your team or presenting timelines to leadership, clear communication is essential. Adapt your language and level of detail to your audience. The goal isn’t to sound smart — it’s to be understood. Great communicators build trust effortlessly.</p>
+
+    <h2>9. Impact evaluation and prioritisation</h2>
+    <p>You’ll constantly face competing priorities. The ability to assess what truly matters — by considering impact, risk, and trade-offs — defines mature engineering judgment. Learn to ask: will this make a noticeable difference? Doing fewer things with higher impact beats doing everything halfway.</p>
+
+    <h2 class="moo-lah-lah-regular">10. Always think about data</h2>
+    <p>Data drives clarity. From diagnosing incidents to justifying roadmaps, evidence-backed reasoning builds credibility. Track metrics, gather logs, and measure outcomes. Data not only helps you make smarter decisions — it also helps you tell a more persuasive story about why your work matters.</p>
 
   </body>
 </html>
 
-#open index.html to see the changes on the web
+<!-- open index.html to see the changes on the web -->
